Added datetime formatting for date analysis

--- a/karma_inflation.ipynb
+++ b/karma_inflation.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_scraper.load_data import load_data"
+    "from data_scraper.load_data import load_data\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -24,6 +25,7 @@
     }
    ],
    "source": [
+    "# Load data, print length and keys\n",
     "all_data = load_data('data/lesswrong_2022-06-03_T11H07M')\n",
     "print(len(all_data))\n",
     "print(all_data[0].keys())"
@@ -43,9 +45,28 @@
     }
    ],
    "source": [
+    "# View sample of data\n",
     "posted_dates = [x['postedAt'] for x in all_data]\n",
     "base_scores = [x['baseScore'] for x in all_data]\n",
     "print(list(zip(posted_dates[:5], base_scores[:5])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2012-09-26 23:46:39.597000\n"
+     ]
+    }
+   ],
+   "source": [
+    "posted_date_obj = [datetime.strptime(x, \"%Y-%m-%dT%H:%M:%S.%fZ\") for x in posted_dates]\n",
+    "print(posted_date_obj[4])"
    ]
   }
  ],
